[package]
name = "funcstomping"
version = "0.1.0"
authors = ["scrubjay55"]
edition = "2021"


[dependencies.windows]
version = "0.30"
features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_ProcessStatus",
            "Win32_System_Memory", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug"]
